crates/cpg-schema/tests/snapshots/contracts__modeled_action_postconditions.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_action_postconditions
family findings
key snapshot_id, postcondition_id
check normal_obligation: outcome_obligation = 0
@lctx.family=findings
@lctx.table=modeled_action_postconditions
snapshot_id: FixedSizeBinary(16) NOT NULL
postcondition_id: FixedSizeBinary(16) NOT NULL
candidate_id: FixedSizeBinary(16) NOT NULL
channel: Int16 NOT NULL [lctx.codebook=summary_channel]
function_node_id: FixedSizeBinary(16) NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
execution_id: FixedSizeBinary(16) NULL
condition_id: FixedSizeBinary(16) NULL
outcome_obligation: Int16 NOT NULL [lctx.codebook=model_exit]
reason: Int16 NULL [lctx.codebook=boundary_reason]
