crates/cpg-schema/tests/snapshots/contracts__modeled_argument_evaluations.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_argument_evaluations
family findings
key snapshot_id, candidate_flow_fact_id, parameter_node_id, pysa_fact_id, model_id, rule_id, argument_fact_id
check ordinal_nonnegative: ordinal >= 0
check evidence_iff_known: (status IN (0, 1, 3, 4, 5, 6, 7, 8, 9) AND evidence_id IS NOT NULL AND reason IS NULL) OR (status = 2 AND evidence_id IS NULL AND reason IS NOT NULL)
check source_read_witness: (status = 0 AND source_normal_evidence_id IS NOT NULL AND evidence_id = candidate_flow_fact_id) OR (status <> 0 AND source_normal_evidence_id IS NULL)
@lctx.family=findings
@lctx.table=modeled_argument_evaluations
snapshot_id: FixedSizeBinary(16) NOT NULL
candidate_flow_fact_id: FixedSizeBinary(16) NOT NULL
parameter_node_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
argument_node_id: FixedSizeBinary(16) NOT NULL
argument_fact_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
status: Int16 NOT NULL [lctx.codebook=modeled_argument_evaluation_status]
evidence_id: FixedSizeBinary(16) NULL
source_normal_evidence_id: FixedSizeBinary(16) NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
condition_id: FixedSizeBinary(16) NOT NULL
