crates/cpg-schema/tests/snapshots/contracts__modeled_assignment_return_paths.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_assignment_return_paths
family findings
key snapshot_id, successor_source_origin_id, predecessor_source_origin_id, reaching_fact_id, pysa_fact_id, model_id, rule_id
check decision_or_boundary: (compatible_under_atoms IS NULL AND boundary_reason IS NOT NULL) OR (compatible_under_atoms IS NOT NULL AND boundary_reason IS NULL)
@lctx.family=findings
@lctx.table=modeled_assignment_return_paths
snapshot_id: FixedSizeBinary(16) NOT NULL
successor_fact_id: FixedSizeBinary(16) NOT NULL
predecessor_fact_id: FixedSizeBinary(16) NOT NULL
source_key: Utf8 NOT NULL
successor_use_id: FixedSizeBinary(16) NOT NULL
successor_source_origin_id: FixedSizeBinary(16) NOT NULL
predecessor_source_origin_id: FixedSizeBinary(16) NOT NULL
reaching_fact_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
parameter_node_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
target_definition_fact_id: FixedSizeBinary(16) NOT NULL
predecessor_condition_id: FixedSizeBinary(16) NOT NULL
reaching_condition_id: FixedSizeBinary(16) NOT NULL
successor_condition_id: FixedSizeBinary(16) NOT NULL
compatible_under_atoms: Boolean NULL
boundary_reason: Int16 NULL [lctx.codebook=boundary_reason]
transfer: Int16 NOT NULL [lctx.codebook=model_transfer_kind]
target_modality: Int16 NOT NULL [lctx.codebook=modality]
model_modality: Int16 NOT NULL [lctx.codebook=modality]
candidate_set_complete_under_model: Boolean NOT NULL
has_unresolved_remainder: Boolean NOT NULL
predecessor_raw_approximated: Boolean NOT NULL
reaching_approximated: Boolean NOT NULL
successor_raw_approximated: Boolean NOT NULL
