crates/cpg-schema/tests/snapshots/contracts__modeled_exception_return_none_paths.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table modeled_exception_return_none_paths
family findings
key snapshot_id, call_site_node_id, pysa_fact_id, model_id, rule_id
check nonnegative_depth: frame_depth >= 0
@lctx.family=findings
@lctx.table=modeled_exception_return_none_paths
snapshot_id: FixedSizeBinary(16) NOT NULL
call_site_node_id: FixedSizeBinary(16) NOT NULL
pysa_fact_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
rule_id: FixedSizeBinary(16) NOT NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
source_syntax_fact_id: FixedSizeBinary(16) NOT NULL
raised_class_node_id: FixedSizeBinary(16) NOT NULL
raised_class_fact_id: FixedSizeBinary(16) NOT NULL
try_node_id: FixedSizeBinary(16) NOT NULL
handler_node_id: FixedSizeBinary(16) NOT NULL
handler_fact_id: FixedSizeBinary(16) NOT NULL
handler_ordinal: Int64 NOT NULL
frame_depth: Int64 NOT NULL
class_match: Int16 NOT NULL [lctx.codebook=modeled_handler_class_match]
class_mro_fact_id: FixedSizeBinary(16) NULL
return_node_id: FixedSizeBinary(16) NOT NULL
return_fact_id: FixedSizeBinary(16) NOT NULL
none_node_id: FixedSizeBinary(16) NOT NULL
none_fact_id: FixedSizeBinary(16) NOT NULL
handler_region_fact_id: FixedSizeBinary(16) NOT NULL
handler_condition_id: FixedSizeBinary(16) NOT NULL
handler_region_approximated: Boolean NOT NULL
target_modality: Int16 NOT NULL [lctx.codebook=modality]
model_modality: Int16 NOT NULL [lctx.codebook=modality]
candidate_set_complete_under_model: Boolean NOT NULL
has_unresolved_remainder: Boolean NOT NULL
